--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ android {
         minSdkVersion 24
         targetSdkVersion 26
         versionCode 815
-        versionName "Beta Sixteen"
+        versionName "Beta Seventeen"
         buildConfigField "java.util.Date", "buildTime", "new java.util.Date(" + System.currentTimeMillis() + "L)"
         buildConfigField "String", "GIT_HASH", "\"${gitHash()}\""
     }
@@ -128,11 +128,6 @@ dependencies {
     compile 'com.android.support:design:26.0.0'
     compile 'com.android.support:palette-v7:26.0.0'
     compile 'com.android.support:preference-v14:26.0.0'
-    // Firebase
-    compile 'com.google.firebase:firebase-core:11.0.4'
-    compile 'com.google.firebase:firebase-crash:11.0.4'
-    compile 'com.google.firebase:firebase-database:11.0.4'
-    compile 'com.google.firebase:firebase-messaging:11.0.4'
     // Image Downloading and Caching
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
